// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonnalisationMenuPage renders loading and loaded state 1`] = `
<div>
  <hgroup
    class="c-PageTitle"
  >
    <h1
      data-testid="title"
    >
      Menu
    </h1>
    <p
      class="c-PageTitle__Description"
      data-testid="description"
    >
      Choisissez, personnalisez et ordonnez les entrées du menu de gauche
    </p>
  </hgroup>
  <div
    class="c-PersonnalisationMenuPage"
  >
    <div
      class="c-CommonLoader c-CommonLoader_cover c-CommonLoader_grow"
    >
      <div
        class="c-CommonSpinner"
        data-testid="common-spinner"
      >
        <div />
        <div />
        <div />
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`PersonnalisationMenuPage renders loading and loaded state 2`] = `
<div>
  <hgroup
    class="c-PageTitle"
  >
    <h1
      data-testid="title"
    >
      Menu
    </h1>
    <p
      class="c-PageTitle__Description"
      data-testid="description"
    >
      Choisissez, personnalisez et ordonnez les entrées du menu de gauche
    </p>
  </hgroup>
  <div
    class="c-PersonnalisationMenuPage"
  >
    <form
      class="c-PersonnalisationMenuPage__Form"
    >
      <div
        class="c-PersonnalisationMenuPage__Group"
      >
        <h2
          class="c-PersonnalisationFooterPage__Title"
        >
          Menu
        </h2>
        <div
          class="c-FormServiceLinks"
        >
          <div
            class="c-FormLabel"
          >
            <label
              class="c-FormLabel__LabelWrapper"
            >
              <span
                class="c-FormLabel__Label"
              >
                Ordre d’affichage du menu
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="c-PersonnalisationMenuPage__Buttons"
      >
        <button
          class="c-CommonButton c-CommonButton_disabled c-CommonButton_primary c-CommonButton_fontSmall"
          disabled=""
          type="submit"
        >
          <div
            class="c-CommonButton__Picto c-CommonButton__Picto_check"
          />
          Enregistrer les modifications
        </button>
        <button
          class="c-CommonButton c-CommonButton_disabled c-CommonButton_secondary c-CommonButton_fontSmall"
          disabled=""
          type="button"
        >
          <div
            class="c-CommonButton__Picto c-CommonButton__Picto_cross"
          />
          Annuler les modifications
        </button>
      </div>
    </form>
  </div>
</div>
`;
